In version 0.3.1:
  BRIEFLY: minor feature enhancements.
  - Can now select and drag more points (just press shift and left click).
    Points can be selected, deselected and dragged. To cancel dragging just
    right click.

In version 0.3.0:
  BRIEFLY: the Box assistant was implemented.
  DETAILS:
  - Added a new tool, providing buttons which can be clicked in order to
    automatically create pieces of scripts in a easier way. The new tool (the
    Box assistant) is meant to provide guidance for new users and speed up
    the work for experienced users.
  - load and save dialogs remember last opened directory (independently).
  - allow cancel exit in window asking whether to save or not unsaved changes.
  - remember last window configuration (size of main window).

In version 0.2.0:
  BRIEFLY: major changes in viewer (most of the program was rewritten)
  DETAILS:
  - The view area was completely rewritten to allow zooming in and out
    and scrolling. Buffering is used to reduce the invokations of the box
    executable and enable faster updating. Failure to compile the Box program
    are signalled by shading the view and hiding the refpoints.
  - It is now possible to rotate the view area (change the way the window
    is split from horizontal to vertical). Boxer remembers the user choice
    when the program is closed and opened again later.
  - Bounding box is now visible and resizable using two refpoints.
  - Can make reference point markers bigger.
  - Can rotate the view and text editor around the window center.

In version 0.1.2:
  BRIEFLY: mainly bugfixes in the Windows port.
  DETAILS:
  - Improved launching of box by passing the right command line arguments.
  - Fixed bugs in the execution of Box in the Windows port.
  - Stopping a hanging Box application may now work also on MS Windows.
  - Added proper command line parser.

In version 0.1.1:
  BRIEFLY: major improvements, in particular in the way reference points