@@ -1,0 +1,60 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<language id="box" _name="Box" version="2.0" _section="Sources">
+  <styles>
+    <style id="comment" _name="Comment" map-to="def:comment"/>
+    <style id="floating-point" _name="Floating point number" map-to="def:floating-point"/>
+    <style id="string" _name="String" map-to="def:string"/>
+    <style id="escaped-character" _name="Escaped Character" map-to="def:special-char"/>
+    <style id="preprocessor" _name="Preprocessor" map-to="def:preprocessor"/>
+    <style id="char" _name="Character" map-to="def:character"/>
+    <style id="keyword" _name="Keyword" map-to="def:keyword"/>
+    <style id="type" _name="Data Type" map-to="def:type"/>
+  </styles>
+  <definitions>
+    <context id="box">
+      <include>
+        <context id="comment" style-ref="comment">
+          <start>\/\/</start>
+          <end>$</end>
+        </context>
+
+        <context id="string" end-at-line-end="true" style-ref="string">
+          <start>"</start>
+          <end>"</end>
+          <include>
+              <context id="escaped-character" style-ref="escaped-character">
+                <match>\\.</match>
+              </context>
+          </include>
+        </context>
+
+        <context id="char" end-at-line-end="true" style-ref="char">
+          <start>'</start>
+          <end>'</end>
+          <include>
+            <context ref="escaped-character"/>
+          </include>
+        </context>
+
+        <context ref="def:decimal"/>
+        <context ref="def:float"/>
+
+        <context id="keywords" style-ref="keyword">
+          <keyword>include</keyword>
+        </context>
+
+        <context id="types" style-ref="type">
+          <match>(\.)?[A-Z][a-zA-Z]*</match>
+        </context>
+
+        <context id="preprocessor" style-ref="preprocessor">
+          <prefix>^#</prefix>
+
+          <keyword>provide</keyword>
+        </context>
+
+      </include>
+    </context>
+  </definitions>
+</language>
+
